--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,13 @@
-<% provide(:title, "Home") %>
-<h1>Sample App</h1>
+<div class="center jumbotron">
+  <h1>Welcome to the Sample App</h1>
 
-<p>
-    This is a sample app
-</p>
+  <h2>
+    This is the Home Page for the
+    <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
+    sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org'%>
